--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,14 @@
   <p>
     <a href="/new_drink">Uusi arvostelu</a>
   </p>
+
+  <h2>Arvostelut</h2>
+  <ul>
+  {% for review in reviews %}
+  <li><a href="/review/{{ review.id }}">{{ review.drink }}</a></li>
+  {% endfor %}
+  </ul>
+
 </body>
 
 </html>
