added search function

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,7 @@
   
   <p>
     <a href="/new_drink">Uusi arvostelu</a>
+    <a href="/find_review">Etsi arvostelu</a>
   </p>
 
   <h2>Arvostelut</h2>
