--- a/templates/login.html
+++ b/templates/login.html
@@ -26,6 +26,9 @@
     <input type="submit" value="Kirjaudu" />
   </form>
   {% endif %}
+    <p>
+      <a href="/">Takaisin</a>
+    </p>
 </body>
 
 </html>
