--- a/templates/new_drink.html
+++ b/templates/new_drink.html
@@ -24,6 +24,9 @@
     </p>
     <input type="submit" value="Julkaise arvostelu" />
   </form>
+    <p>
+      <a href="/">Takaisin</a>
+    </p>
 </body>
 
 </html>
